# gpo_tenderchad

./: GPO TenderChad.postman_collection.json  README.md  docker-compose.yml
analysis_service/app/api/: __init__.py  api.py
analysis_service/app/core/: config.py
analysis_service/app/messaging/: consume.py  publish.py
analysis_service/app/service/: service.py
it-analysis_service/: pyproject.toml
it-analysis_service/app/: main.py
it-analysis_service/app/api/: __init__.py  api.py
it-analysis_service/app/core/: config.py
it_search-service/: pyproject.toml
it_search-service/app/: main.py
it_search-service/app/api/: __init__.py  api.py
it_search-service/app/core/: config.py
it_search-service/app/messaging/: consume.py  publish.py
it_search-service/app/service/: service.py
it_search-service/app/utils/: merge_request.py
tender-service/: pyproject.toml
tender-service/app/: main.py
tender-service/app/api/: __init__.py  tender_api.py
tender-service/app/core/: config.py  database.py
tender-service/app/crud/: crud.py
tender-service/app/models/: federal_law.py  key_word.py  purchase_stage.py  supplier_definition.py  technology.py  tender.py
tender-service/app/preset_data/: init_tender_data.py
tender-service/app/schemas/: law.py  stage.py  tender.py
tender-service/app/utils/: convert_date.py
user-service/: Dockerfile  initial_data.py  prestart.sh  pyproject.toml
user-service/app/: main.py
user-service/app/api/: deps.py
user-service/app/api/v1/: __init__.py
user-service/app/core/: config.py  database.py  security.py
user-service/app/crud/: users.py
user-service/app/models/: base.py  users.py
user-service/migrations/: env.py
user-service/migrations/versions/: d5156913af32_create_user_table.py
