[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["GRASS_IT <45945921+GRASS-120@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pika = "^1.3.2"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"
pymongo = "^4.7.1"
beanie = "^1.25.0"
motor = "^3.4.0"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
