[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["irumako <irumakoTS@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "*"
asyncpg = "*"
pyhumps = "*"
alembic = "*"
pydantic = {version = "*", extras = ["email"]}
passlib = {version = "*", extras = ["bcrypt"]}
python-jose = "*"
python-multipart = "*"
fastapi = "*"
uvicorn = "*"
pydantic-settings = "*"
arq = "*"
uvloop = "*"
psycopg2-binary = "^2.9.9"
markupsafe = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
flake8 = "*"
isort = "*"
black = "*"
mypy = "*"
httpx = "*"
asgi-lifespan = "*"
aioredis = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
